--- a/planning-agent.ipynb
+++ b/planning-agent.ipynb
@@ -3293,7 +3293,7 @@
    "id": "18ffcc83-350e-4f99-b03b-458690cc0ed2",
    "metadata": {},
    "source": [
-    "## Inspect further"
+    "### Tasks and Resources"
    ]
   },
   {
@@ -3613,6 +3613,14 @@
     "df_tasks.style.set_table_attributes('border=\"1\"').set_caption(\"Task Details\").set_table_styles(\n",
     "    [{'selector': 'th, td', 'props': [('font-size', '120%')]}]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af692e24",
+   "metadata": {},
+   "source": [
+    "### Gantt Chart"
    ]
   },
   {
@@ -4711,7 +4719,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
     "import plotly.express as px\n",
     "from datetime import datetime, timedelta\n",
     "\n",
